# ZjDroid-skills

./: .gitignore  AGENTS.md  build.gradle  gradle.properties  install.sh  settings.gradle
.github/workflows/: build-apk.yml  ci.yml  deploy.yml
app/: build.gradle
scripts/: check-apk.sh  e2e-test.sh  preflight.sh  verify-install.sh  wait-release.sh  xposed-enable.sh
sdk/: pyproject.toml
sdk/examples/: demo_unpack.py
sdk/tests/: test_commands.py  test_logcat.py
sdk/zjdroid_agent/: __init__.py  client.py  commands.py  logcat.py
website/: index.md  package-lock.json  package.json
website/.vitepress/: config.mts
website/architecture/: api-monitor-arch.md  broadcast-protocol.md  command-flow.md  dex-in-memory.md  hook-framework.md  injection-lifecycle.md  lua-injection.md  native-bridge.md  overview.md  security-boundary.md  unpacking-pipeline.md
website/features/: api-monitor.md  backsmali.md  dex-dump.md  dexinfo.md  dump-class.md  heap-dump.md  lua-invoke.md  mem-dump.md
website/guide/: apkprotect.md  first-command.md  getting-started.md  install.md  view-results.md  workflow.md
website/internals/: index.md
website/internals/baksmali/: ClassDefinition.md  MethodDefinition.md  baksmali-class.md  baksmali-renderers.md  baksmaliOptions.md  index.md
website/internals/dexlib2/: index.md
website/internals/luajava/: CPtr.md  Console.md  JavaFunction.md  index.md  (+6 more)
website/intro/: capabilities.md  limitations.md  problem-it-solves.md  what-is-zjdroid.md
website/reference/: api-hooks.md  commands.md  protocol.md  structure.md
website/source/: index.md
(+147 files in other folders)
