# sdk/pyproject.toml
[project]
name = "zjdroid-agent"
version = "0.1.0"
description = "Programmatic SDK for AI agents to install and invoke ZjDroid"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["zjdroid_agent*"]
